# python-rpi-steppermotor-precise

./: README.md  setup.cfg  setup.py
examples/: pigpio-simulator.py  testA4988.py  testDRV8825.py
steppermotor_precise/: A4988.py  AutoA4988.py  AutoDRV8825.py  BasicDriver.py  DRV8825.py  __init__.py
