[metadata]
name = python-rpi-steppermotor-precise
version = 1.0
author = JB Aans
author_email = jbaans-at-gmail.com
description = Advanced stepper motor interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jbaans/pyhton-rpi-steppermotor-precise
keywords = 'raspberry', 'pi', 'gpio', 'pigpio', 'precise', 'PWM', 'A4988',
              'DRV8825', 'stepper', 'motor', 'driver', 'interface', 'wrapper'
project_urls =
    Bug Tracker = https://github.com/jbaans/python-rpi-steppermotor-precise/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Automation Industry
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
python_requires = >= 3.7
install_requires =
    pigpio>=1.0
